base-installer (1.94) UNRELEASED; urgency=low

  [ Frans Pop ]
  * Allow to select driver inclusion policy for initramfs-tools
    Closes: #494466

 -- Christian Perrier <bubulle@debian.org>  Sat, 16 Aug 2008 19:50:35 -0300

base-installer (1.93) unstable; urgency=low

  [ Frans Pop ]
  * Improve kernel selection for AMD64. All k8 and most k7 systems support the
    686 kernel flavor. Only older k7 systems without SSE support need 486.
    Based on documentation the divider seems to be at family 6, model 6.
    Closes: #490542.
  * Avoid locale related errors up to the point where locales gets installed
    by setting IT_LANG_OVERRIDE=C for apt-install.

  [ Ian Campbell ]
  * i386: If the installer is running a -bigmem kernel and the processors
    support PAE then select a -bigmem kernel for installation. For
    compatibility with running under Xen. Closes: #480054.

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * Croatian (hr.po) by Josip Rodin
  * Italian (it.po) by Milo Casagrande
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Slovak (sk.po) by Ivan Masár
  * Turkish (tr.po) by Mert Dirik

 -- Otavio Salvador <otavio@debian.org>  Tue, 29 Jul 2008 12:08:43 -0300

base-installer (1.92) unstable; urgency=low

  * Call base-installer.d hooks after running debootstrap, for consistency
    with live-installer. (So, pre_install_hooks is run after bootstrap, but
    before anything is installed with apt. So the name still makes a kind
    of sense, if you squint..)
  * Remove sources.list before running base-installer.d hooks. Otherwise,
    apt-install will try to run apt, rather than queuing, and apt is not
    configured yet.

  [ Updated translations ]
  * Belarusian (be.po) by Pavel Piatruk
  * Esperanto (eo.po) by Serge Leblanc
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Slovenian (sl.po) by Matej Kovacic
  * Tagalog (tl.po) by Eric Pareja
  * Turkish (tr.po) by Mert Dirik